
    <TableLayout android:id="@+id/tableLayout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="${relativePackage}.${activityClass}"
        android:background="#ffffff"

        >
        <TableRow android:id="@+id/row1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#1976d2"
                android:text="@string/position"
                android:id="@+id/position"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#1976d2"
                android:text="@string/name"
                android:id="@+id/name"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#1976d2"
                android:text="@string/count"
                android:id="@+id/votes"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                />
        </TableRow>
        <TableRow android:id="@+id/row2">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#1976d2"
                android:text="@string/posboycr"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#1976d2"
                android:id="@+id/boycr"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#1976d2"
                android:id="@+id/cboycr"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                />
        </TableRow>

        <TableRow android:id="@+id/row3">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/posgirlcr"
                android:textColor="#1976d2"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#1976d2"
                android:id="@+id/girlcr"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#1976d2"
                android:id="@+id/cgirlcr"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                />
        </TableRow>
        <TableRow android:id="@+id/row4">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#1976d2"
                android:text="@string/posboysi"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#1976d2"
                android:id="@+id/boysi"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#1976d2"
                android:id="@+id/cboysi"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                />
        </TableRow>
        <TableRow android:id="@+id/row5">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#1976d2"
                android:text="@string/posgirlsi"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#1976d2"
                android:id="@+id/girlsi"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#1976d2"
                android:id="@+id/cgirlsi"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                />
        </TableRow>
    </TableLayout>
